--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/SolicitudesSCDM.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/SolicitudesSCDM.cshtml
@@ -89,7 +89,8 @@
                                         @using (Html.BeginForm(null, null, FormMethod.Get, new { id = "buscarForm", @class = "form-horizontal form-label-left" }))
                                         {
                                             <div class="form-group row">
-                                                <div class="col-md-10 col-sm-10 ">
+                                                <label class="control-label col-md-1 col-sm-1" for="id_estatus" style="text-align:right">Estatus:</label>
+                                                <div class="col-md-11 col-sm-11 ">
                                                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                                                         @{string valorEstatus = (Request.QueryString["estatus"] != null ? Request.QueryString["estatus"] : string.Empty);
                                                             Dictionary<string, int> estatusAmountDictionary = (Dictionary<string, int>)ViewBag.estatusAmount;
@@ -102,6 +103,19 @@
                                                             </label>
                                                         }
                                                     </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group row">
+                                                <label class="control-label col-md-1 col-sm-1 label-align" for="id_solicitud">Núm Solicitud:</label>
+                                                <div class="col-md-2 col-sm-2">
+                                                    <input type="text" class="form-control" name="id_solicitud" id="id_solicitud" value="@Request.Params["id_solicitud"]" autocomplete="off">
+                                                </div>
+
+                                                <div class="col-md-1 col-sm-1">
+                                                    <input type="button" value="borrar" class="btn btn-danger" id="borrarForm" />
+                                                </div>
+                                                <div class="col-md-1 col-sm-1">
+                                                    <input type="submit" value="buscar" class="btn btn-info" />
                                                 </div>
                                             </div>
 
@@ -143,8 +157,8 @@
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.id_solicitante)
                                                 </th>
-                                                @if (Request.QueryString["estatus"] == Enum.GetName(typeof(Portal_2_0.Models.SCMD_solicitud_estatus_enum), (int)Portal_2_0.Models.SCMD_solicitud_estatus_enum.RECHAZADA_SCDM)
-                                                    || Request.QueryString["estatus"] == Enum.GetName(typeof(Portal_2_0.Models.SCMD_solicitud_estatus_enum), (int)Portal_2_0.Models.SCMD_solicitud_estatus_enum.RECHAZADA_DEPARTAMENTO)
+                                                @if (Request.QueryString["estatus"] == Enum.GetName(typeof(Portal_2_0.Models.SCMD_solicitud_estatus_enum), (int)Portal_2_0.Models.SCMD_solicitud_estatus_enum.RECHAZADA_ASIGNADA_A_SCDM)
+                                                    || Request.QueryString["estatus"] == Enum.GetName(typeof(Portal_2_0.Models.SCMD_solicitud_estatus_enum), (int)Portal_2_0.Models.SCMD_solicitud_estatus_enum.RECHAZADA_ASIGNADA_A_SOLICITANTE)
                                                   )
                                                 {
                                                     <th>
@@ -192,8 +206,8 @@
                                                         @Html.DisplayFor(modelItem => item.empleados.ConcatNombre)
                                                     </td>
 
-                                                    @if (Request.QueryString["estatus"] == Enum.GetName(typeof(Portal_2_0.Models.SCMD_solicitud_estatus_enum), (int)Portal_2_0.Models.SCMD_solicitud_estatus_enum.RECHAZADA_SCDM)
-                                                        || Request.QueryString["estatus"] == Enum.GetName(typeof(Portal_2_0.Models.SCMD_solicitud_estatus_enum), (int)Portal_2_0.Models.SCMD_solicitud_estatus_enum.RECHAZADA_DEPARTAMENTO)
+                                                    @if (Request.QueryString["estatus"] == Enum.GetName(typeof(Portal_2_0.Models.SCMD_solicitud_estatus_enum), (int)Portal_2_0.Models.SCMD_solicitud_estatus_enum.RECHAZADA_ASIGNADA_A_SCDM)
+                                                        || Request.QueryString["estatus"] == Enum.GetName(typeof(Portal_2_0.Models.SCMD_solicitud_estatus_enum), (int)Portal_2_0.Models.SCMD_solicitud_estatus_enum.RECHAZADA_ASIGNADA_A_SOLICITANTE)
                                                         )
                                                     {
                                                         <td style="color:red;">
@@ -205,7 +219,7 @@
                                                     }
 
                                                     <td>
-                                                        @Html.DisplayFor(modelItem => item.EstatusSolicitud)
+                                                        @Html.DisplayFor(modelItem => item.estatusTexto)
                                                     </td>
                                                     <td nowrap>
                                                         <a href="@Url.Action("AsignarTareas", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success btn-sm" data-toggle="tooltip" data-placement="top" title="Editar Asignaciones">
@@ -262,6 +276,15 @@
                 "scrollX": true,
                 "info": false
             });
+
+            var form = document.getElementById("buscarForm");
+
+            //borra los campos antes de enviarlos
+            $("#borrarForm").click(function () {
+                $('#id_solicitud').val("");
+                form.submit();
+            });
+
 
             //inicializa radio toogle
             $(".btn-group-toggle").twbsToggleButtons();
