--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -473,7 +473,7 @@
                                                 <li class="@(ViewBag.SegundoNivel == "mis_solicitudes_mm" ? "current-page" : null )"><a href="@Url.Action("Index", "SCDM_solicitud")">Mis Solicitudes</a></li>
                                                 @if (User.IsInRole(TipoRoles.SCDM_MM_APROBACION_INICIAL))
                                                 {
-                                                    <li class="@(ViewBag.SegundoNivel == "solicitudes_departamento" ? "current-page" : null )"><a href="@Url.Action("SolicitudesRevisionInicial", "SCDM_solicitud")">Revisión Inicial</a></li>
+                                                    <li class="@(ViewBag.SegundoNivel == "solicitudes_inicial" ? "current-page" : null )"><a href="@Url.Action("SolicitudesRevisionInicial", "SCDM_solicitud")">Revisión Inicial</a></li>
                                                 }
                                                 @if (User.IsInRole(TipoRoles.SCDM_MM_APROBACION_SOLICITUDES))
                                                 {
